--- a/rootfs_overlay/etc/erlinit.config
+++ b/rootfs_overlay/etc/erlinit.config
@@ -9,15 +9,13 @@
 
 # Specify where erlinit should send the IEx prompt. Only one may be enabled at
 # a time.
-#-c ttyS0     # UART pins on the GPIO connector
--c tty1      # HDMI output
+-c ttyPS0 # UART
 
 # If more than one tty are available, always warn if the user is looking at the
 # wrong one.
 --warn-unused-tty
 
-# Use nbtty to improve terminal handling on serial ports.
-# Comment out or delete for HDMI (tty1)
+# Use nbtty to improve terminal handling on serial ports. It's a noop on HDMI.
 -s "/usr/bin/nbtty"
 
 # There's a call to getrandom(2) when loading the crypto NIF that's before
@@ -60,8 +58,7 @@
 #       nerves_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
 -m /dev/mmcblk0p1:/boot:vfat:ro,nodev,noexec,nosuid:
--m /dev/mmcblk0p3:/root:f2fs:nodev:
--m pstore:/sys/fs/pstore:pstore:nodev,noexec,nosuid:
+-m /dev/mmcblk0p3:/root:ext4:nodev:
 -m tmpfs:/sys/fs/cgroup:tmpfs:nodev,noexec,nosuid:mode=755,size=1024k
 -m cpu:/sys/fs/cgroup/cpu:cgroup:nodev,noexec,nosuid:cpu
 
